--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
     "name": "create-react-package",
     "version": "0.0.1",
     "description": "Create react npm package",
-    "main": "dist/index.js",
+    "main": "dest/create-react-package.js",
+    "umd:main": "dest/create-react-package.umd.js",
+    "module": "dest/create-react-package.m.js",
+    "source": "src/index.js",
     "scripts": {
-        "build": "babel ./src --out-dir ./dest -s inline",
-        "test": "jest",
+        "start": "npx microbundle watch -o dest/ --sourcemap true --compress false",
+        "build": "npx microbundle -o dest/ --sourcemap false --compress true",
+        "test": "npx jest",
+        "clear": "rm -rf dest node_modules",
         "prepublishOnly": "npm run test && npm run build"
     },
     "author": "",
     "license": "ISC",
     "files": [
-        "dist/*"
+        "dest/*"
     ],
     "devDependencies": {
         "@babel/cli": "7.2.3",
         "@babel/core": "7.3.4",
         "@babel/preset-env": "7.3.4",
         "@babel/preset-react": "7.0.0",
+        "microbundle": "0.11.0",
         "react": "16.8.4"
     },
     "peerDependencies": {
