--- a/package.json
+++ b/package.json
@@ -18,13 +18,22 @@
     "files": [
         "dest/*"
     ],
+    "engines": {
+        "node": "11.x"
+    },
     "devDependencies": {
         "@babel/cli": "7.4.4",
         "@babel/core": "7.4.5",
+        "@babel/plugin-proposal-class-properties": "7.4.4",
         "@babel/preset-env": "7.4.5",
         "@babel/preset-react": "7.0.0",
+        "enzyme": "3.10.0",
+        "enzyme-adapter-react-16": "1.14.0",
+        "enzyme-to-json": "3.3.5",
+        "jest": "24.8.0",
         "microbundle": "0.11.0",
-        "react": "16.8.6"
+        "react": "16.8.6",
+        "react-dom": "16.8.6"
     },
     "peerDependencies": {
         "react": ">=16.8.0"
