Add src to npm ignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,1 +1,17 @@
-dest/*.map
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+node_modules
+.sass-cache
+notes.md
+coverage
+yarn.lock
+package-lock.json
+src
+jest.config.js
+jest.setup.js
+babel.config.js
